--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "bootstrap": "^5.3.2",
+    "graphql": "^16.8.1",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
