updated package.json descriptions, license, created by//

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "client",
+  "name": "google api book search engine client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
